# tariff-exchange-rates

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml
Exchange_Rate_Tariffs/: main.tex  paper_draft.tex  references.bib  three_country_two_sector_one_factor_model.tex  two_country_price_index.tex  two_country_two_sector_one_factor_model.tex
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
dashboard/public/data/: calibration_panel.json  fx_data.json  theory_grid.json
dashboard/src/: App.jsx  index.css
dashboard/src/components/: AboutPanel.jsx  CalibrationPanel.jsx  CountryCard.jsx  LocusChart.jsx  TheoryPanel.jsx
dashboard/src/lib/: interpolate.js  modelJs.js
data/: calibration_panel.json  fx_data.json  theory_grid.json
notebooks/: section2_two_country_model.ipynb  section3_three_country_model.ipynb  section3_two_country_model.ipynb  section4_calibration.ipynb  section4_three_country_model.ipynb  section5_calibration.ipynb  section5_calibration_v1.ipynb
scripts/: fetch_fx_data.py  precompute_calibration_panel.py  precompute_theory_grid.py  regenerate_calibration_figure.py
src/tariff_exchange_rates/: __init__.py  economy.py  equilibrium.py  parameters.py  plotting.py  tariffs.py
